- Added application details and icon

--- a/EverythingDopusCLI/EverythingDopusCLI.vcxproj.filters
+++ b/EverythingDopusCLI/EverythingDopusCLI.vcxproj.filters
@@ -26,5 +26,18 @@
     <ClInclude Include="utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="EverythingDopusCLI.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resources\EverythingDopusCLI.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
