--- a/EverythingDopusCLI/EverythingDopusCLI.vcxproj
+++ b/EverythingDopusCLI/EverythingDopusCLI.vcxproj
@@ -167,7 +167,14 @@
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="utils.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="EverythingDopusCLI.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resources\EverythingDopusCLI.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
